@@ -37,7 +37,7 @@ import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
 
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.nio.ByteBuffer;
 import java.util.concurrent.TimeUnit;
 
@@ -68,7 +68,8 @@ public class TestLoadBytes {
         }
 
         srcBufferNative = ByteBuffer.allocateDirect(size);
-        srcSegmentImplicit = MemorySegment.allocateNative(size, SegmentScope.auto());
+        Arena scope = Arena.ofAuto();
+        srcSegmentImplicit = scope.allocate(size, 1);
     }
 
     @Benchmark
